# qsale-mcp-server

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
qa_mcp/: client.py  proposals.py  server.py  tools.py
