[project]
name = "qa-mcp"
version = "0.1.0"
description = "MCP server bridging Claude Code to qsale console REST API (console.qsale.io)."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qa_mcp*"]
