[project]
name = "qsale-mcp"
version = "0.2.1"
description = "Model Context Protocol server for the QSale platform — catalog, content, segments, dictionaries, mailings, and admin tasks via console.qsale.io REST."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Dmitry Volodchenkov", email = "volodchenkov@users.noreply.github.com" },
]
requires-python = ">=3.11"
keywords = ["mcp", "qsale", "claude", "anthropic", "model-context-protocol", "e-commerce", "headless-commerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/qsale-io/qsale-mcp-server"
Repository = "https://github.com/qsale-io/qsale-mcp-server"
Issues = "https://github.com/qsale-io/qsale-mcp-server/issues"
Changelog = "https://github.com/qsale-io/qsale-mcp-server/blob/master/CHANGELOG.md"

[project.scripts]
qsale-mcp = "qa_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qa_mcp*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
